Fix pager / caption overlap when caption is not entered

--- a/includes/css/fusion-extension-gallery.css
+++ b/includes/css/fusion-extension-gallery.css
@@ -364,6 +364,9 @@
 		bottom:40px;
 		padding:0 100px;
 	}
+	.fsn-gallery .masthead[data-controls="paging"] .masthead-item-content, .fsn-gallery .masthead[data-controls="both"] .masthead-item-content	{
+		bottom:76px;
+	}
 }
 
 /**
